Mon Nov  7 16:23:41 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/ExecutionManager/ExecutionManager.mpc
	* DAnCE/NodeApplicationManager/NodeApplicationManager.mpc
	* performance-tests/Benchmark/Benchmark.mpc
	* performance-tests/Benchmark/RoundTripClient/RoundTripClient.mpc
	* performance-tests/Benchmark/RoundTripServer/RoundTripServer.mpc

	Resolving linking errors on OS X.
	
Mon Nov  7 14:00:31 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* NEWS: Added some new TO-DO items.

Mon Nov 07 10:23:09 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/RTNodeApp_Configurator.cpp: Fixed
	  incorrect usage of extracting a struct from an any.  Thanks much
	  to Gan for helping with the debugging effort.

	* examples/Hello/descriptors/rt_run_test.pl:
	* examples/Hello/descriptors/rt-example.cdp: Enabled the use of RT
	  policy sets and RT-enabled NodeApplication in the example by
	  default.

	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp: Minor enhancement to
	  the debug messages.

Fri Nov 04 16:44:29 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* DAnCE/NodeApplicationManager/ImplementtionInfo.cpp

	  Changed to use the "copying" version of the Any insertion
	  operator. Thanks Jeff Parsons for the help on this.

Thu Nov 03 15:34:39 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp

	  Fixed a bug which causes unknow exception when calling
	  startLaunch on NodeApplicationManager.

Thu Nov  3 19:36:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeManager_Impl.cpp:
          Fixed implicit conversion warning in VxWorks build

        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client.cpp:
          Renamed global variable count to counter to fix clash with STL count
          algoritm on VxWorks

Thu Nov 03 11:14:52 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/RTConfig_Manager.cpp: Added a tad more and